--- a/moduleconnexion/style.css
+++ b/moduleconnexion/style.css
@@ -7,7 +7,7 @@
 body{
     margin : 0;
     padding : 0;
-    background-image: url("Images/background.jpg");
+    background-image: url("../Images/background.jpg");
     background-size: cover;
 }
 
@@ -71,6 +71,10 @@ form {
 
 span {
     color: red;
+}
+
+.div-admin{
+    
 }
 
 /*###################################################################################*/
